# pythonProject

./: .env.example  .gitignore  AI_USAGE.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  data.json  pyproject.toml
.github/workflows/: buildApptainerContainer.yml  buildApptainerEnv.yml  buildContainer.yml  buildDockerContainer.yml  deployDocs.yml  unitTests.yml
config/: hello.json
containers/: dev.def  env.def  say_hello.Dockerfile  say_hello.def
data/: README.md
docs/: conf.py  index.md  scripts.md
docs/_static/css/: custom-pst.css
docs/content/: docker.md  docs.md  runningScripts.md
docs/content/containers/: apptainerDevLayer.md  index.md
docs/content/testing/: index.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_d98847eb0ba44d25_hello_py.html  z_d98847eb0ba44d25_math_py.html  z_d98847eb0ba44d25_processor_py.html  z_d98847eb0ba44d25_utils_py.html
results/: output_hello.txt
scripts/: run_matrix.py
scripts/drafts/: hello.py  say_hello.py
src/mypkgs/: __init__.py  math.py  processor.py  utils.py
tests/: conftest.py  test_hello.py  test_math.py  test_processor.py  test_utils.py
