[project]
name = "your_project_name"
authors = [
  { name="Your Name", email="your.email@example.com" },
  { name="Another Name", email="another.email@example.com" },
]
description = "Brief description of your project"
# Relative path to the README.md file
readme = "README.md"
# Pin for an analyisis (== or ~= for patching) and minimal for a package (>=)
requires-python = "~=3.13.0"
# Relative path to the license file
license.file = "LICENSE"
# Use git tags for versioning
dynamic = ["version"]

dependencies = [
    # pin (== or ~= with patches) when developing scripts, minimal (>=) for packages
    "numpy==2.3.5",
]

[project.urls]
# TODO: Change this to the url of your github repository
Homepage = "https://github.com/j-i-l/pythonProject"
Issues = "https://github.com/j-i-l/pythonProject/issues"

[dependency-groups]
test = [
    "pytest~=7.4.3",
    "coverage~=7.3.3",
    "pytest-cov~=4.1.0",
]
docs = [
    "Sphinx==8.1.3",
    "pydata-sphinx-theme==0.16.1",
    "sphinx-togglebutton==0.4.4",
    "sphinx_design==0.6.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autoapi==3.6.1",
    "myst-parser==4.0.1",
    "sphinx-tippy==0.4.3",
    "sphinx-autobuild==2025.8.25",
]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    "black>=23.0",
    "ruff>=0.1.0",
]

# specify the packages to install (needed if different from project name)
[tool.hatch.build.targets.wheel]
packages = ["src/mypkgs"]

# Use git tags as version for the package
[tool.hatch.version]
source = "vcs"

# (Optional and can be removed)
[tool.hatch.build.hooks.vcs]
# TODO: Replace `mypkgs` with your specific folder in src/
# TODO: be sure to import `__version__ from this (see src/mypkg/__init__.py)
version-file = "src/mypkgs/_version.py"

# For pytest coverage reports
# config for the test coverage
[tool.coverage.run]
relative_files = true
source = [
    "src/mypkgs",
]
[tool.coverage.paths]
source = [
  "src/mypkgs",
]

[build-system]
# Require hatch-vcs alongside hatchling to enable Git tag versioning
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
